@@ -1,5 +1,8 @@
 2009-09-20  Ozkan Sezer  <sezeroz@gmail.com>
 
+	* stddef.h: Removed the errno.h stuff that have no sane reason to stay
+	in stddef.h for mingw.
+
 	* _mingw.h (__USE_MINGW_ANSI_STDIO): If not explicitly defined by the
 	user, only check against the _POSIX define when forcibly enabling it.
 
